--- a/project 1/playlist.html
+++ b/project 1/playlist.html
@@ -5,8 +5,9 @@
 	<title>CSS Grid Experiments</title>
 	<meta name="description" content="css grid experiments">
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:700,900" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:900,900i" rel="stylesheet">
-	 <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
 </head>
 <body>
   <main>
